<resources>
    <string name="app_name">TanksGame</string>
    <string name="move">Move</string>
    <string name="fire_rocket">Fire Rocket</string>
    <string name="fire">Fire</string>
    <string name="tanks_battle">Tanks Battle</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="loading1">Loading.</string>
    <string name="loading2">Loading..</string>
    <string name="loading3">Loading…</string>
    <string name="login_failed">Login failed please sign in first</string>
    <string name="login_successful">Login successful</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="invalid_email_format">Invalid email format. Email must contain \'@\'</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed user/mail exist</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out\n</string>
    <string name="exit_message">Press again to exit</string>
    <string name="leader_board">Leader Board</string>
    <string name="no_data">No Data</string>
    <string name="leaderboard">Leaderboard</string>
</resources>